Fixed padding in cards, and alt on nav logos

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <div id="navWrapper">
     <nav>
         <ul id="primaryNav">
-            <li class="active"><a href="#about"><img src="images/profile.svg" width="50"><span>about me</span></a></li>
-            <li><a href="#work"><img src="images/portfolio.svg" width="50"><span>work</span></a></li>
-            <li><a href="#skills"><img src="images/skills.svg" width="50"><span>skills</span></a></li>
-            <li><a href="#resume"><img src="images/resume.svg" width="50"><span>resume</span></a></li>
-            <li><a href="#contact"><img src="images/email.svg" width="50"><span>contact</span></a></li>
+            <li class="active"><a href="#about"><img src="images/profile.svg" alt="about"  width="50"><span>about me</span></a></li>
+            <li><a href="#work"><img src="images/portfolio.svg" alt="work" width="50"><span>work</span></a></li>
+            <li><a href="#skills"><img src="images/skills.svg" alt="skills" width="50"><span>skills</span></a></li>
+            <li><a href="#resume"><img src="images/resume.svg" alt="resume" width="50"><span>resume</span></a></li>
+            <li><a href="#contact"><img src="images/email.svg" alt="contact" width="50"><span>contact</span></a></li>
 
         </ul>
     </nav>
